# CMakeApp

./: CMakeLists.txt
.github/workflow/: pr_comment.yml
.github/workflows/: main.yml
cmake/modules/: warnings.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/lib/: CMakeLists.txt  lib.cpp  lib.h
